--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p class="category text-white">Software Engineer</p>
                 <a class="btn btn-primary smooth-scroll mr-2" target="_blank" href="https://github.com/imbansalvishal"
                   data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Github</a>
-                  <a class="btn btn-primary" href="Vishal Bansal Resume.pdf"
+                  <a class="btn btn-primary" href="Vishal_CV.pdf"
                   data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
                   <a class="btn btn-primary" target="_blank" href="https://www.linkedin.com/in/vbans1203/"
                   data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Linkedin</a>
