--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="card-body">
                   <div class="h4 mt-0 title">About</div>
                   <p>Hello! I am Vishal Bansal. An enthusiastic Programmer.</p>
-                  <p>I am a Software Engineer with six years five months of successfully leading teams in delivering appropriate technology solutions for Business Analytics in Banking/Financial Domain (Domain expertise in Corporate Card Data). •	Comprehensive knowledge of platform development, enterprise architecture, agile methodologies, cloud services, web-based applications, and BigData technologies. Skilled in Java and its framework, JavaScript and its framework and SQL, Container Orchestration.</p>
+                  <p>I am a Software Engineer with seven years five months of successfully leading teams in delivering appropriate technology solutions for Business Analytics in Banking/Financial Domain (Domain expertise in Corporate Card Data). •	Comprehensive knowledge of platform development, enterprise architecture, agile methodologies, cloud services, web-based applications, and BigData technologies. Skilled in Java and its framework, JavaScript and its framework and SQL, Container Orchestration.</p>
                 </div>
               </div>
               <div class="col-lg-6 col-md-12">
@@ -214,7 +214,7 @@
               </div>
             </div>
           </div>
-          <!-- <div class="card">
+          <div class="card">
             <div class="row">
               <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                 <div class="card-body cc-experience-header">
@@ -238,7 +238,7 @@
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
           
         </div>
       </div>
