--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                 <div class="card-body cc-experience-header">
                   <p>July 2021 - Present</p>
-                  <div class="h5">Americal Express India Ltd, Gurgaon</div>
+                  <div class="h5">American Express India Ltd, Gurgaon</div>
                 </div>
               </div>
               <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
