--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="card-body">
                   <div class="h4 mt-0 title">About</div>
                   <p>Hello! I am Vishal Bansal. An enthusiastic Programmer.</p>
-                  <p>I am a Software Engineer with seven years five months of successfully leading teams in delivering appropriate technology solutions for Business Analytics in Banking/Financial Domain (Domain expertise in Corporate Card Data). •	Comprehensive knowledge of platform development, enterprise architecture, agile methodologies, cloud services, web-based applications, and BigData technologies. Skilled in Java and its framework, JavaScript and its framework and SQL, Container Orchestration.</p>
+                  <p>I am a Software Engineer with Nine years five months of successfully leading teams in delivering appropriate technology solutions for Business Analytics in Banking/Financial Domain (Domain expertise in Corporate Card Data). •	Comprehensive knowledge of platform development, enterprise architecture, agile methodologies, cloud services, web-based applications, and BigData technologies. Skilled in Java and its framework, JavaScript and its framework and SQL, Container Orchestration.</p>
                 </div>
               </div>
               <div class="col-lg-6 col-md-12">
@@ -126,9 +126,7 @@
                 <br> 
                 <div class="col-sm-4"><strong class="text-uppercase">Version Control:</strong></div><br>
                 <div class="col-sm-8">Github and Bitbucket</div>
-                <br>                
-                <!-- <div class="col-sm-4"><strong class="text-uppercase">Functional Modules:</strong></div><br>
-                <div class="col-sm-8">SAP MM (Material Management), SAP SD (Sales and distribution) and ServiceNow</div><br> -->
+                <br>
                 <div class="col-sm-4"><strong class="text-uppercase">Database and Server:</strong></div><br>
                 <div class="col-sm-8">Oracle 11g, MySQL, PostgreSQL, MongoDB, JSON, Apache Tomcat, JBoss</div><br>
                 <div class="col-sm-4"><strong class="text-uppercase">Tools:</strong></div><br>
@@ -154,7 +152,7 @@
                   <div class="h5">Software Engineer</div>
                   <p>
                     <ul>
-                      <li>Responsible for leading a team of 6-7 developers along side product for developing Corporate Client Incentive system.</li>
+                      <li>Responsible for leading a team of 10-14 developers alongside product for developing Corporate Client Incentive system.</li>
                       <li>Work on product’s technical roadmap.</li>
                       <li>Design High-level and Low-level system designs.</li>
                       <li>Leading Agile ceremonies for Scrum team.</li>
@@ -245,26 +243,7 @@
       <div class="section" id="education">
         <div class="container cc-education">
           <div class="h4 text-center mb-4 title">Education</div>
-          <!-- <div class="card">
-            <div class="row">
-              <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                <div class="card-body cc-education-header">
-                  <p>2010 - 2014</p>
-                  <div class="h5">Bachelor's Degree</div>
-                </div>
-              </div>
-              <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                <div class="card-body">
-                  <div class="h5">Bachelor of Technology</div>
-                  <p class="category">Punjabi University Patiala</p>
-                  <p>
-                      Graduate Student in Master of Science at Northeastern University with majors in Application Engineering and Development, and Web Design and User Interface.
-                      <br>GPA: 3.84
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div> -->
+
           <div class="card">
             <div class="row">
               <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -284,184 +263,7 @@
           </div>
         </div>
       </div>
-      
-      <!-- <div class="section" id="academicProjects">
-          <div class="container cc-education">
-            <div class="h4 text-center mb-4 title">Academic Projects</div>
-            <div class="card">
-              <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-education-header">
-                    <div class="h5">Container Orchestration using Kubernetes</div>
-                  </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body">
-                    <div class="h5">Master of Information Technology</div>
-                    <p class="category">Northeaster University</p>
-                    <p>
-                        <ul>
-                          <li>
-                            Created a full stack application and deployed on Kubernetes cluster using Helm charts and ansible via CICD process.
-                          </li>
-                          <li>
-                            Programmed backend in Node JS, frontend in React JS. Used KOPS for creating Kubernetes cluster on AWS, Kubernetes for deploying and managing containerized applications, Docker for container images, Helm chart and ansible for deployment, Jenkins for CICD, EFK (Elastic Search, Fluentd and Kibana) stack for logs, and Prometheus and Grafana for metrices.
-                          </li>
-                          <li>
-                            Developed application and deployed it as containers on Kubernetes cluster from docker image of the application. Deployed application using ansible roles and helm chart, Designed Jenkins Pipeline to build, push docker images to Docker Hub and perform rolling update style deployments on the Kubernetes cluster.
-                          </li>
-                        </ul>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-education-header">
-                    <div class="h5">Node Rest API With AWS</div>
-                  </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body">
-                    <div class="h5">Master of Information Technology</div>
-                    <p class="category">Northeaster University</p>
-                    <p>
-                        <ul>
-                          <li>
-                            Created a REST API application and deployed on EC2 instance via CICD process using various AWS services.
-                          </li>
-                          <li>
-                            Programmed REST API in Node JS and utilized AWS services like VPC, CloudFormation, EC2, Lambda Function, RDS, DynamoDB, S3, Route 53, CloudWatch, Autoscaling Group, AWS CLI and IAM.
-                          </li>
-                          <li>
-                            Developed Rest API for library Management System and deployed this application on EC2 instance using CloudFormation and Circle CI. Create a shell script to create own Network infrastructure and application infrastructure.
-                          </li>
-                        </ul>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-education-header">
-                    <div class="h5">Event Look Up</div>
-                  </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body">
-                    <div class="h5">Master of Information Technology</div>
-                    <p class="category">Northeaster University</p>
-                    <p>
-                        <ul>
-                          <li>
-                            Implemented an application for searching event based on location and category.
-                          </li>
-                          <li>
-                            Programmed application using JavaScript, HTML, Bootstrap, Spring MVC, Hibernate.
-                          </li>
-                          <li>
-                            Developed application to search event within the selected city and category. User can book and manage booked tickets. Any user can create an event but It will available for booking once admin approves that event.
-                          </li>
-                        </ul>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
 
-
-            <div class="card">
-              <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-education-header">
-                    <div class="h5">Blood Supply Chain Management System</div>
-                  </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body">
-                    <div class="h5">Master of Information Technology</div>
-                    <p class="category">Northeaster University</p>
-                    <p>
-                        <ul>
-                          <li>
-                              Implemented an application to search for blood donors based on location and blood type.
-                          </li>
-                          <li>
-                              Programmed application using Java swing for desktop application and used Angular 6 and node JS for the web application.
-                          </li>
-                          <li>
-                              Developed application to provide an easy and user friendly environment where a user can search for blood donors based on
-                              location and blood group, as well as hospital. Application also provides functionality to hospital to manage its blood bank.
-                          </li>
-                        </ul>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-education-header">
-                    <div class="h5">Web based PostgreSQL database client application</div>
-                  </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body">
-                    <div class="h5">Bachelor of Computer Science</div>
-                    <p class="category">Shri Govindram Seksaria Institute Of Technology And Science, Indore, India</p>
-                    <p>
-                      <ul>
-                        <li>
-                            Implemented a web-based client for PostgreSQL database to use the services of PostgreSQL over the network
-                        </li>
-                        <li>
-                            Programmed application using Java server pages, HTML, CSS and developed on Netbeans IDE
-                        </li>
-                        <li>
-                            Developed application to provide an efficient and user friendly web application to users, work on PostgreSQL database and
-                            access, manage and handle database in efficient and easy way over web
-                        </li>
-                      </ul>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-			<div class="card">
-              <div class="row">
-                <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body cc-education-header">
-                    <div class="h5">Student Mark sheet Generation systems</div>
-                  </div>
-                </div>
-                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body">
-                    <div class="h5">Bachelor of Computer Science</div>
-                    <p class="category">Shri Govindram Seksaria Institute Of Technology And Science, Indore, India</p>
-                    <p>
-                      <ul>
-                        <li>
-                            Implemented an application for generation and management of student mark sheet sport on single click
-                        </li>
-                        <li>
-                            Programmed application using Java swing with integration of MySQL database for storing data
-                        </li>
-                        <li>
-                            Developed student mark sheet report generation system gives ease to university to keep track of students record like personal information’s and grades. It provides flexibility to generate student mark sheet on single click.
-                        </li>
-                      </ul>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
       <div class="section" id="contact">
         <div class="cc-contact-information" style="background-image: url('images/staticmap.png');">
           <div class="container">
