--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <ul>
                 <li>Developed a strategic roadmap for migrating 30+ data applications from One-Prem to GCP cloud.</li>
                 <li>Led a team of over 20+ engineers, overseeing the development and maintenance of Sales and Corporate Incentive payouts for Amex commercial business.</li>
-<!--                <li>Collaborated with product management to define technical requirements and prioritize development efforts aligned with business goals.</li>-->
+                <!--                <li>Collaborated with product management to define technical requirements and prioritize development efforts aligned with business goals.</li>-->
                 <li>Spearheaded the adoption of cloud-native architectures, enhancing system scalability and reducing operational costs by 20%.</li>
                 <li>Implemented Agile methodologies, resulting in a 30% increase in team productivity and a 25% reduction in time-to-market for new features.</li>
                 <li>Mentored and developed engineering talent, fostering a culture of continuous learning and innovation.</li>
@@ -197,40 +197,41 @@
               <div class="h5">Associate Technology Consultant</div>
               <p>
               <ul>
-                <li>Responsible for building a platform for generating data reports from the HADOOP cluster.</li>
-                <li>Designed E2E application architecture for Enterprise reporting platform used by business analytics teams.</li>
-                <li>Developed Node.js rest APIs (Express framework) and classes which manipulates the data received from frontend and helps in creation of a file which is transmitted to UNIX server where the file is processed for creation of query tables.</li>
+                <li>Developed and maintained the UI for a reporting platform using Angular, ensuring a responsive and user-friendly interface.</li>
+                <li>Built and deployed Java microservices with Spring Boot and Spring Data, enabling efficient and scalable backend operations.</li>
+                <li>Utilized Jenkins and XLR for continuous integration and continuous delivery (CI/CD), automating build, test, and deployment processes.</li>
+                <li>Implemented database schemas in MS-SQL, optimizing queries and ensuring data integrity for reporting purposes.</li>
               </ul>
               </p>
             </div>
           </div>
         </div>
       </div>
-<!--      <div class="card">-->
-<!--        <div class="row">-->
-<!--          <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">-->
-<!--            <div class="card-body cc-experience-header">-->
-<!--              <p>May 2014 - April 2018</p>-->
-<!--              <div class="h5">Infosys Technologies</div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">-->
-<!--            <div class="card-body">-->
-<!--              <div class="h5">Senior Software Engineer</div>-->
-<!--              <p>-->
-<!--              <ul>-->
-<!--                <li></li>-->
-<!--                <li></li>-->
-<!--                <li></li>-->
-<!--                <li></li>-->
-<!--                <li></li>-->
-<!--                <li></li>-->
-<!--              </ul>-->
-<!--              </p>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
+      <!--      <div class="card">-->
+      <!--        <div class="row">-->
+      <!--          <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">-->
+      <!--            <div class="card-body cc-experience-header">-->
+      <!--              <p>May 2014 - April 2018</p>-->
+      <!--              <div class="h5">Infosys Technologies</div>-->
+      <!--            </div>-->
+      <!--          </div>-->
+      <!--          <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">-->
+      <!--            <div class="card-body">-->
+      <!--              <div class="h5">Senior Software Engineer</div>-->
+      <!--              <p>-->
+      <!--              <ul>-->
+      <!--                <li></li>-->
+      <!--                <li></li>-->
+      <!--                <li></li>-->
+      <!--                <li></li>-->
+      <!--                <li></li>-->
+      <!--                <li></li>-->
+      <!--              </ul>-->
+      <!--              </p>-->
+      <!--            </div>-->
+      <!--          </div>-->
+      <!--        </div>-->
+      <!--      </div>-->
 
     </div>
   </div>
